# fastapi-base

./: .gitignore  Makefile  README.md  pyproject.toml
app/: main.py
app/apis/depends/: __init__.py  auth_depend.py  database_depend.py
app/apis/endpoints/: __init__.py  auth_endpoint.py  user_endpoint.py
app/common/constants/: __init__.py  app_status.py  auth_constant.py  common_constant.py
app/common/definitions/: __init__.py  auth_definition.py  common_definition.py  user_definition.py
app/common/enums/: __init__.py  auth_enum.py  common_enum.py  user_enum.py
app/core/: __init__.py  exception.py  loggers.py  settings.py
app/core/databases/: __init__.py  postgresdb.py
app/core/middlewares/: __init__.py  exception_middleware.py  url_validation_middleware.py
app/core/pattens/: singleton.py
app/models/: __init__.py  base_model.py  user_details_model.py  user_model.py
app/opa/: regal.yml
app/opa/permissions/: __init__.py  base_permission.py  user_permission.py
app/opa/rules/: users.rego  utils.rego
app/repositories/: __init__.py  base_repo.py  registry_repo.py  user_details_repo.py  user_repo.py
app/schemas/: base_schema.py
app/schemas/requests/: __init__.py  auth_request.py  paginate_request.py  user_request.py
app/schemas/responses/: __init__.py  base_response.py  user_response.py
app/services/: __init__.py  auth_service.py  user_service.py
app/utils/: __init__.py  convert_util.py  crypto_util.py  date_util.py  decorator_util.py  misc_util.py
deployments/: .dockerignore  Dockerfile  Dockerfile.allure  Dockerfile.postgres  docker-compose.dev.yml  docker-compose.pytest.dev.yml
migrations/: README.md  check_alembic.ps1  check_alembic_enum.py  env.py
migrations/versions/: 5bf88cdb13d7_add_user_mangaments_table.py  a9ccb3ce063c_generate_superuser.py
tests/: conftest.py  pytest.ini
tests/data/: user_details.json  users.json
tests/seed_data/: __init__.py  seed_base.py  seed_user.py  test_clear_all_data.py  test_create_all_data.py  test_generate_all_data.py
tests/seed_data/data/: users.json
tests/testcases/auth/: cons_auth.py  test_auth.py
tests/tools/: fix_model.py  list_db_tables.py
tests/tools/core/: settings.py
tests/tools/ui/: admin.py  apps.py
tests/tools/ui/models/: __init__.py  pcs_user_details.py
